--- a/vMeadow.ini.example
+++ b/vMeadow.ini.example
@@ -5,7 +5,7 @@
     chat_channel = 18
 
     ;Time in seconds between updates
-    cycle_time = 20
+    cycle_time = 30
 
     ;# of rows and columns in the community matrix
     ;Must be 50x50 grid to work with the webapp!
@@ -19,8 +19,11 @@
     ;Distance between matrix cells (average distance between plants)
     cell_spacing = 5
 
-    ;Place the plants near the matrix coordinates for a more natural appearance, rather than directly on the coordinates.  This does not effect on the simulation outcome - only the appearance.
+    ;Place the plants near the matrix coordinates for a more natural appearance,
+    ;rather than directly on the coordinates.  This does not effect on the
+    ;simulation outcome - only the appearance.
     natural_appearance = true;
 
-    ;Url path to community configuration info.
-    config_path = "http://fernseed.usu.edu/vMeadowInfo/"
+    ;Url path to community configuration info (The vMeadowGA Google AppEngine
+    ;tool can be used).
+    config_path = "http://http://localhost:8080/"
