Separated the simulation from the visualization.

--- a/vMeadow.ini.example
+++ b/vMeadow.ini.example
@@ -23,6 +23,9 @@
     ;simulation outcome - only the appearance.
     natural_appearance = true;
 
+    ;Number of generations to run in the simulation.
+    generations = 10000
+
     ;Url path to community configuration info (The vMeadowGA Google AppEngine
     ;tool can be used).
     config_path = "http://vmeadowga.aduffy70.org/"
