Add support for reporting data on a HUD (vpcHUDv1).  Simulation now takes water level into consideration so we don't have plants included in the simulation that do not get included in the visualization.

--- a/vMeadow.ini.example
+++ b/vMeadow.ini.example
@@ -29,3 +29,9 @@
     ;Url path to community configuration info (The vMeadowGA Google AppEngine
     ;tool can be used).
     config_path = "http://vmeadowga.aduffy70.org/"
+
+    ;Path to the folder where logs will be stored.  This folder must exist.
+    log_path = "addon-modules/vMeadow/logs/"
+
+    ;A unique identifier for the logs from this region.
+    instance_tag = "myregion"
