--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,12 @@
 application: vmeadowga
-version: 1
+version: 2
 runtime: python
 api_version: 1
 
 handlers:
+- url: /images
+  static_dir: images
+
 - url: /.*
   script: vMeadowGA.py
+
