Changed "generation" to "step" in all user messages. Added 1 to the number of steps they request in the configs so if they ask for 10000 steps they will get steps 0-10000 instead of 0-9999.

--- a/vMeadow.ini.example
+++ b/vMeadow.ini.example
@@ -23,8 +23,8 @@
     ;simulation outcome - only the appearance.
     natural_appearance = true;
 
-    ;Number of generations to run in the simulation.
-    generations = 10000
+    ;Number of steps or cycles to run in the simulation.
+    simulation_steps = 10000
 
     ;Url path to community configuration info (The vMeadowGA Google AppEngine
     ;tool can be used).
